@@ -1,3 +1,12 @@
+2001-09-27  Don Porter  <dgp@users.sourceforge.net>
+
+        * generic/tclIO.c (ChannelTimerProc):  Added Tcl_Preserve()
+        and Tcl_Release() to fix segfault introduced by the 2001-09-26
+        changes.  [Bug 465494]
+
+        * doc/TCL_MEM_DEBUG.3:  Updated out-of-date reference to
+        #define GUARD_SIZE.
+
 2001-09-26  Andreas Kupries  <andreas_kupries@users.sourceforge.net> 
 
 	* The changes below fix [Bug #462317] where Expect tried to read
